--- a/css/about.css
+++ b/css/about.css
@@ -553,9 +553,9 @@ PANTALLA DE TABLETS SMALL (sm) - revisamos en tablet vertical 768px
 @media(max-width:991px) and (min-width:768px){
 
 
-    section .contenedor .fila{
+    /*section .contenedor .fila{
         height:2608px !important;
-    }
+    }*/
 
     #about{
     position:relative;
